# AI-agents

./: DETAILS.md  SYSTEMD.md  build-log.txt  build-test.sh  commit-files.sh  deploy.sh  package.json  preload.ts  serve.ts  site.json  vite.config.ts
hsmc-pay-android/: .gitignore  App.tsx  HSMCPay.apk  README.md  app.json  package.json  tsconfig.json
hsmc-pay-android/android/: build.gradle  gradle.properties  settings.gradle
nfc-bridge/: README.md  install.sh  package.json  server.js
public/: manifest.json  sw.js
python-backend/: .gitignore  config.py  main.py  requirements.txt
python-backend/api/: routes.py
python-backend/backtesting/: data.py  engine.py  metrics.py
python-backend/ml/: optimizer.py  predictor.py
python-backend/strategies/: base.py  breakout.py  mean_reversion.py  trend_following.py
rust-engine/: Cargo.toml  run.sh
rust-engine/src/: config.rs  main.rs  types.rs
rust-engine/src/api/: routes.rs
rust-engine/src/market/: data.rs
rust-engine/src/orderbook/: engine.rs  types.rs
rust-engine/src/risk/: checker.rs  limits.rs  mod.rs
src/: routeTree.gen.ts
src/components/: AgentFeed.tsx  AgentNetworkGraph.tsx  AlertBell.tsx  AlertToast.tsx  ChainChart.tsx  DataError.tsx  FloatingAIAssistant.tsx  GlobalSearch.tsx  HelpGuide.tsx  POSReceipt.tsx  ParticleField.tsx  PortfolioChart.tsx  Terminal.tsx  ThemeTransition.tsx  TokenBalances.tsx  WalletProvider.tsx
src/contracts/: .env.example  CrossChainArbitrage.sol  FlashLoanArbitrage.sol  HSMCVault.sol  PaunVault.sol  PaymentSettlement.sol  YieldOptimizer.sol  deploy.ts  hardhat.config.ts  (+2 more)
(+190 files in other folders)
